@@ -21,7 +21,7 @@ public class ChestDodge extends BaseUniqueChest {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.DEXTERITY, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.DEXTERITY, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
