@@ -20,7 +20,7 @@ public class ChestWater extends BaseUniqueChest {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.INTELLIGENCE, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.INTELLIGENCE, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
