@@ -19,7 +19,7 @@ public class HammerPhysical extends BaseUniqueHammer {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.STRENGTH, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.STRENGTH, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
