@@ -20,7 +20,7 @@ public class HelmetMana extends BaseUniqueHelmet {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.WISDOM, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.WISDOM, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
