@@ -21,7 +21,7 @@ public class HelmetWisdom extends BaseUniqueHelmet {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.WISDOM, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.WISDOM, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
