@@ -15,7 +15,7 @@ import java.util.List;
 
 public class MagesLuckyAmulet extends BaseUniqueNecklace {
 
-    static StatReq req = new StatReq(LvlPointStat.WISDOM, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.WISDOM, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
