@@ -23,7 +23,7 @@ public class RingDodge extends BaseUniqueRing {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.DEXTERITY, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.DEXTERITY, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
