@@ -17,7 +17,7 @@ public class SwordPhysical extends BaseUniqueSword {
 
     }
 
-    static StatReq req = new StatReq(LvlPointStat.STRENGTH, StatReq.Size.BIG);
+    static StatReq req = new StatReq(LvlPointStat.STRENGTH, StatReq.Size.NORMAL);
 
     @Override
     public StatReq getRequirements() {
